src/components/app/css/app.css
.preset_container {
  margin-top: 5%;
  margin-bottom: 1%;
}

.choice_container {
  margin-left: 5%;
  margin-right: 5%;
  margin-bottom: 1%;
  border: 2px solid black;
  display: grid;
  grid-template-columns: 34% 32% 34%;
}

.item_container {
  margin-left: 5%;
  margin-right: 5%;
  border: 2px solid black;
}

